--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,13 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  production:
+  adapter: mysql2
+  database: <%= ENV['DB_NAME'] %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASS'] %>
+  encoding: utf8
+  host: <%= ENV['DB_HOST'] || '127.0.0.1' %>
+  port: <%= ENV['DB_PORT'] || 3306 %>
+  pool: <%= ENV['DB_POOL'] || 50 %>
+  timeout: <%= ENV['DB_TIMEOUT'] || 5000 %>
